# coding-exercises

./: .gitignore  README.md  one-time-setup.sh
rate-limited-public-api-proxy/: requirements.md
s3-backed-kv-store-service/: .dockerignore  DESIGN.md  Dockerfile  Dockerfile.minio  README.md  docker-compose.yml  justfile  one-time-setup.sh  pyproject.toml  requirements.md  test_minio.py
s3-backed-kv-store-service/src/: config.py  main.py  utils.py
s3-backed-kv-store-service/src/api/: handlers.py  middleware.py  routes.py
s3-backed-kv-store-service/src/io/: __init__.py  base.py  local.py  minio.py  s3.py
